--- a/Ejercicios-Youtube/2-NIVEL-MEDIO/css/styles.css
+++ b/Ejercicios-Youtube/2-NIVEL-MEDIO/css/styles.css
@@ -218,6 +218,18 @@ nav.elements-menu.open ul li a {
     height: 100vh;
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
 }
   
+.box-btns {
+    margin-bottom: 20px;
+}
+
+form[name="form_reloj"] input {
+    background: black;
+    color: white;
+    text-align: center;
+    height: 40px;
+    font-size: 20px;
+}
