Envípo de formulario AJAX PHP

--- a/Ejercicios-Youtube/3-AJAX/06-envio-formulario-AJAX-PHP/css/styles.css
+++ b/Ejercicios-Youtube/3-AJAX/06-envio-formulario-AJAX-PHP/css/styles.css
@@ -18,6 +18,10 @@ html {
     display: none;
 }
 
+h1 { 
+  text-align: center;
+}
+
 .contact-form {
     --form-ok-color: #4caf50;
     --form-error-color: #f44336;
