--- a/Ejercicios-Youtube/3-AJAX/04-uploader-DRAG-DROP-ajax-PHP/css/styles.css
+++ b/Ejercicios-Youtube/3-AJAX/04-uploader-DRAG-DROP-ajax-PHP/css/styles.css
@@ -14,6 +14,10 @@ html {
     box-sizing: border-box;
 }
 
+h1 {
+    text-align: center;
+}
+
 main {
     display: flex;
     align-items: center;
